--- a/jinyong/index.html
+++ b/jinyong/index.html
@@ -1,19 +1,19 @@
-<!doctype html>
 <html>
 
 <head>
-    <title>camera</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="css/main.css" />
-    <meta name="mobile-web-app-capable" content="yes">
+    <meta charset="UTF-8">
+    <title>FaceApi Landmarks Demo</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
+    <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js" type="text/javascript"></script>
+
+    <style></style>
 </head>
 
-<body>
-    <video autoplay></video>
-    <img src="">
-    <canvas style="display:none;"></canvas>
+<script src="script/app.js"></script>
 
-    <script src="script/app.js"></script>
+<body>
+    <h1>FaceApi Landmarks Demo</h1>
 </body>
 
 </html>
