레이아웃 1차 완료

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="copy"  id="container"> 
     <center>
 
-        <p> <h1>Share this url <a id="url_a_id" target=_blank><span id="url_id"></span></a> to friend to start video chat </h1></p>
+        <p> <h1> ##<a id="url_a_id" target=_blank><span id="url_id"></span></a> ## </h1></p>
 
     </center>
   </div>
@@ -73,7 +73,7 @@
   <!-- <video id="video1"  width="320" height="240" autoplay></video> !-->
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <!--script type='text/javascript' src='js/main.js'></script-->
+  <!--script type='text/javascript' src='js/main.js'--></script>
   
   <script type='text/javascript' src='js/bootstrap.js'></script>
 </body>
