--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
 <body>
   <div class="copy"  id="container"> 
     <center>
-
         <p> <h1> ##<a id="url_a_id" target=_blank><span id="url_id"></span></a> ## </h1></p>
-
     </center>
   </div>
   
@@ -38,7 +36,7 @@
       <center>
           <video id="video" width="320" height="240"   autoplay muted ></video>
           <canvas id="canvas" width="320" height="240"></canvas>
-        <video id="remoteVideo" width="320" height="240" autoplay></video>
+          <video id="remoteVideo" width="320" height="240" autoplay></video>
           <fieldset id="photo-filter">
               <legend>Color filter</legend>
               <input type="radio" name="filter" id="normal" value="none" checked="checked">
@@ -73,7 +71,7 @@
   <!-- <video id="video1"  width="320" height="240" autoplay></video> !-->
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <!--script type='text/javascript' src='js/main.js'--></script>
+  <script type='text/javascript' src='js/main.js'></script>
   
   <script type='text/javascript' src='js/bootstrap.js'></script>
 </body>
