마무리시간이라 코드 정리좀 하고 커밋

--- a/Gyeony95/index.html
+++ b/Gyeony95/index.html
@@ -53,7 +53,7 @@
       <button id="clear-button" class="btn btn-dark">Clear</button>
     </center>
   </div>
-  <div class="img-frame" id ="photos"></div>
+  <div id ="container"><div class="img-frame" id="photos"></div></div>
   <div id="container">
     <h2 id="status"> </h2>
   </div>
