--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style></style>
 </head>
 <body>
+    <div>wait...</div>
     <script src="script/app.js"></script>
     <script src="script/face.js"></script>
 </body>
